no cache settings

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,14 @@ server{
   listen       [::]:8000 default_server;
   server_name  eucan.com;
   root         /usr/share/nginx/html;
-  index        index.html;
+  index        index.html;  
+  location / {
+        add_header Last-Modified $date_gmt;
+        add_header Cache-Control 'no-store, no-cache';
+        if_modified_since off;
+        expires off;
+        etag off;
+    }
   charset utf-8;
   access_log /var/log/nginx/access_log;
   error_log /var/log/nginx/error_log;
